--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.61",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@vercel/analytics": "^1.1.1",
     "chart.js": "^4.4.0",
     "image-compressor.js": "^1.1.4",
     "react": "^18.2.0",
